--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -14,7 +14,7 @@
                             <h1>Order - # <%= order.id %> - <a href="/orders/<%= order.id %>">Invoice</a></h1>
                             <ul class="orders__products">
                                 <% order.products.forEach(p => { %>
-                                    <li class="orders__products-item"><%= p.product.title %> (<%= p.quantity %>)</li>
+                                    <li class="orders__products-item"><%= p.title %> (<%= p.OrderItem.quantity %>)</li>
                                 <% }); %>
                             </ul>
                         </li>
